# ChangeLog for sys-kernel/hardened-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.352 2010/11/02 17:52:21 blueness Exp $

*hardened-sources-2.6.35-r6 (02 Nov 2010)
*hardened-sources-2.6.32-r24 (02 Nov 2010)

  02 Nov 2010; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r24.ebuild, +hardened-sources-2.6.35-r6.ebuild:
  hardened-sources-2.6.32-r24 based on 2.6.32.25 + genpatches +
  grsecurity-2.2.0-2.6.32.25-201010311944
  hardened-sources-2.6.35-r6 based on 2.6.35.8 + genpatches +
  grsecurity-2.2.0-2.6.35.8-201010311944

  02 Nov 2010; Anthony G. Basile <blueness@gentoo.org>
  hardened-sources-2.6.32-r23.ebuild:
  ppc64 stable, bug #343535

*hardened-sources-2.6.35-r5 (24 Oct 2010)
*hardened-sources-2.6.32-r23 (24 Oct 2010)

  24 Oct 2010; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r23.ebuild, +hardened-sources-2.6.35-r5.ebuild:
  hardened-sources-2.6.32-r23 based on 2.6.32.24 + genpatches +
  grsec-2.2.0-2.6.32.24-201010232009
  hardened-sources-2.6.35-r5 based on 2.6.35.7 + genpatches +
  grsec-2.2.0-2.6.35.7-201010232009

  24 Oct 2010; Anthony G. Basile <blueness@gentoo.org>
  hardened-sources-2.6.32-r22.ebuild:
  Broken on ppc/ppc64, bug #341915#c6

  24 Oct 2010; Anthony G. Basile <blueness@gentoo.org>
  -hardened-sources-2.6.32-r16.ebuild, -hardened-sources-2.6.32-r17.ebuild,
  -hardened-sources-2.6.32-r18.ebuild, -hardened-sources-2.6.32-r19.ebuild,
  -hardened-sources-2.6.32-r20.ebuild, -hardened-sources-2.6.32-r21.ebuild,
  -hardened-sources-2.6.34-r4.ebuild, -hardened-sources-2.6.34-r5.ebuild,
  -hardened-sources-2.6.35.ebuild, -hardened-sources-2.6.35-r1.ebuild,
  -hardened-sources-2.6.35-r2.ebuild, -hardened-sources-2.6.35-r3.ebuild:
  Removing vulnerable kernels where possible, bug #341801

  21 Oct 2010; Anthony G. Basile <blueness@gentoo.org>
  hardened-sources-2.6.32-r22.ebuild: