@@ -25,6 +25,7 @@ DIST hardened-patches-2.6.32-12.extras.tar.bz2 338946 RMD160 ce283b495ee2f009d36
 DIST hardened-patches-2.6.32-25.extras.tar.bz2 353143 RMD160 d16ce4880936ee2f38043d2f7035e266a4b32121 SHA1 ba369d782934837064137aca2163b6eadc5290d1 SHA256 ba68fccf49a34be472bc71d624f8d2f9b285f9bcb5583e81d3b33032b268b04e
 DIST hardened-patches-2.6.32-26.extras.tar.bz2 354210 RMD160 eaab82b1d4940f13ab68b60791326f7436c56eda SHA1 baed0b07dee67c641127a779db43f640aa639e07 SHA256 544d274410a4a802abff0278ff7655059b234f57be30144641ae871b92014ca7
 DIST hardened-patches-2.6.32-27.extras.tar.bz2 354339 RMD160 b8310719dcaf0bb36a1f8f1a4608d2f2e3250b91 SHA1 4063abdb2e67ed522453660a5c99793ef0fc7a34 SHA256 d6500e5b4336ca612d51cc27d3c89d882f613623c7f46dcf4082aa4a77a3fc49
+DIST hardened-patches-2.6.32-28.extras.tar.bz2 357290 RMD160 3f6a65faf462871bf01307218ffc40b866ae6f1f SHA1 f7130b55e690b67785056fc81c09a6d303a3c8b7 SHA256 2bb33ed4c47c29d7dfa2cb40017f7caf259a5424629939cb81c3d775ba194503
 DIST hardened-patches-2.6.34-7.extras.tar.bz2 337669 RMD160 7177ec91676644a863b94765a2b83d026d43a9dd SHA1 c96e2156f33aac21d4e1fa5950fe3098402714e0 SHA256 3fb2cda6fb2724296e0e1a946ca7b69293e04da9f21ecb563f2ba282f7a8099a
 DIST hardened-patches-2.6.35-5.extras.tar.bz2 349293 RMD160 ddc51440c6061f5f59bfa165298771e4cb3fb480 SHA1 101a936a0755c48ea350641ce1dde67d1df7b075 SHA256 bef90ae0c52c54fd74aa672fa8cf48bf937ff8439191d0d08a0d6baeabda2f2d
 DIST hardened-patches-2.6.35-6.extras.tar.bz2 348365 RMD160 34f64101eb49bf4f8f770a3026626db5cce52010 SHA1 e88dcdfcfd32ae407fd77cdbe8700e624d345796 SHA256 f845c4de8f0cdc594c3d45d2b3bcb8019df6989d129dded7034d974455c24c31
@@ -37,10 +38,11 @@ EBUILD hardened-sources-2.6.28-r9.ebuild 1899 RMD160 ec8912b43989f91c8818d72f0ae
 EBUILD hardened-sources-2.6.32-r22.ebuild 1706 RMD160 da3d3481ed239c5fbf8db97ee7421d711f2dc713 SHA1 007269c86778c4fbe5acb9909ca6dfe283d95b16 SHA256 102ae174d58c70593855baaea299d0501151cc3a2ffa0531c97dee1674a55378
 EBUILD hardened-sources-2.6.32-r23.ebuild 1707 RMD160 48f434263368524639bc47bac2f81347adf3c6f6 SHA1 379de4edaccdc61999bfa1b01c6c018e3dc8547d SHA256 4bbed8ec8317b453d0f24487ce17ec72923f1fcc6eddc90b753f4f8f79f4c95e
 EBUILD hardened-sources-2.6.32-r24.ebuild 1708 RMD160 ca1e926cc1a0769a321e78c120a744bad8597c87 SHA1 159260516ca16269e60ac16acdcff405c695e999 SHA256 afd93b913dfc412bf2126af9d5d03fb7ed4face81b34cf2b283eb6f705c4b9eb
+EBUILD hardened-sources-2.6.32-r25.ebuild 1713 RMD160 1353f802477ca46aaafa32939a88f98aae7107bf SHA1 1884b2617b48db0d4371ffeb134ec7b029c07ebd SHA256 8d78649cc1be2fb3a7e6abb272b7d5498343731bf44362f335042e4b1f93585b
 EBUILD hardened-sources-2.6.32-r9.ebuild 1860 RMD160 18b591c7337e1aa801e8676ff80292b988ed332e SHA1 46a40ea2830743e0d6acc84f465c40ad3ec11f4f SHA256 9a3a5de2c2a5ee692202bfa7bdad128bd916b4aebc83ae816954e1795116b159
 EBUILD hardened-sources-2.6.34-r6.ebuild 1705 RMD160 b1e2aad310693084b55f819ca93540126b10703c SHA1 83ce1781e5f556d52a56cbad05c4abcab9caa2ff SHA256 12b6ad57fae957470ed365a5058a268c0c70a2c73e5d4db4e581064d05d05f55
 EBUILD hardened-sources-2.6.35-r4.ebuild 1706 RMD160 b53d6c020c7fbc74a4df1377db0b4e1f119c38ce SHA1 6936d491c07f25809659c94c4df5fabe0c74e794 SHA256 6608afd809ac5d90d427dfffccc40fb9e82c9ee0348ccebcb4e0a3cc49fc2071
 EBUILD hardened-sources-2.6.35-r5.ebuild 1706 RMD160 73d350e00ab91678deae86b938a6cad063c74d87 SHA1 221e32023a4555987563b78f1e35e0189543a5bb SHA256 7ffa9134c5e4e405d93771052fffba90504ed7581748dd7803bf10b501c963a8
 EBUILD hardened-sources-2.6.35-r6.ebuild 1706 RMD160 b62a1f005bbf5ec762b2e7f31359b6412f4d44fc SHA1 a9207a490a33340a4d9acb8de4d488391465887a SHA256 1abe0c37a7182bc1b24980f0bbbfb32cf1202914d2910f53ac9afab54107387b
-MISC ChangeLog 76681 RMD160 ac1d662f60a39652d349d39964609c89f558ec66 SHA1 445bb18b8bbb507f976da0b25d4d0a927a11d30d SHA256 b3e5a8500f87b21b49cee1fefdf8f910d6a112d7b7cccdfd927ed4b98d1a5099
+MISC ChangeLog 76926 RMD160 99c343623f0190ac5c78799d9389116c393d61cc SHA1 a5123c9c9478fdd2c687903d288100352c730f1a SHA256 d223a880ab91e796cdc4cdb6b797d82e8e07c7e16c01af97727a1bab460308dd
 MISC metadata.xml 578 RMD160 7ea189a37d0f863ae9c52170bb85df27d21686fb SHA1 4765c25d7770a69f7b9dda2b1accc8ff27b74ad0 SHA256 64140e091b51002a5355d8fcfd351f2f39ed63da68af3a5751fc2058d0d03813
