@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.352 2010/11/02 17:52:21 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.353 2010/11/07 21:52:34 blueness Exp $
+
+*hardened-sources-2.6.32-r25 (07 Nov 2010)
+
+  07 Nov 2010; Anthony G. Basile <blueness@gentoo.org>
+  +hardened-sources-2.6.32-r25.ebuild:
+  hardened-sources-2.6.32-r25 based on 2.6.32.25 + genpatches +
+  grsecurity-2.2.0-2.6.32.25-201011062054
 
 *hardened-sources-2.6.35-r6 (02 Nov 2010)
 *hardened-sources-2.6.32-r24 (02 Nov 2010)
